--- a/classes.html
+++ b/classes.html
@@ -12,6 +12,37 @@
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1IHdhpC6Ety5qOn+3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous" />
   <style>
+     body {
+      background-color: #ffe4eb; /* Light pink */
+      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    nav.navbar-dark {
+      background-color: #C71585 !important; /* Dark pink */
+    }
+
+    nav.navbar-dark .navbar-nav .nav-link {
+      color: #ffffff;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+
+    nav.navbar-dark .navbar-nav .nav-link:hover,
+    nav.navbar-dark .navbar-nav .nav-link:focus {
+      color: #ffb6c1;
+      text-decoration: underline;
+    }
+
+    footer {
+      background-color: #C71585;
+      color: #ffffff;
+      padding: 1rem 0;
+      text-align: center;
+      font-size: 0.9rem;
+      margin-top: 3rem;
+    }
+  
     body {
       background: #fff5f8;
     }
