--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="cakes.html">Our cakes</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="classes.html">Baking Class</a>
           </li>
           <li class="nav-item">
