--- a/index.html
+++ b/index.html
@@ -18,45 +18,26 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    /* Nav background with overlay like About page */
     nav.navbar {
       position: relative;
-      background-image: url('https://images.unsplash.com/photo-1589308078056-918258c62782?auto=format&fit=crop&w=1200&q=80'); /* Cake-themed */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
+      background-color: #C71585; /* Dark pink */
     }
 
-    nav.navbar::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background-color: rgba(44, 47, 51, 0.7); /* Overlay */
-      pointer-events: none;
-      z-index: 0;
-    }
-
-    nav.navbar .container,
-    nav.navbar .navbar-collapse {
-      position: relative;
-      z-index: 1;
-    }
-
-    nav.navbar-dark .navbar-brand,
-    nav.navbar-dark .navbar-nav .nav-link {
+    nav.navbar .navbar-brand,
+    nav.navbar .nav-link {
       color: #fff;
       font-weight: 600;
       transition: color 0.3s ease;
     }
 
-    nav.navbar-dark .navbar-nav .nav-link:hover,
-    nav.navbar-dark .navbar-nav .nav-link:focus {
-      color: #ffb6c1;
+    nav.navbar .nav-link:hover,
+    nav.navbar .nav-link:focus {
+      color: #ffb6c1; /* Light pink on hover */
       text-decoration: underline;
     }
 
     footer {
-      background-color: #2c2f33;
+      background-color: #C71585; /* Dark pink */
       color: #ffffff;
       padding: 1rem 0;
       text-align: center;
@@ -91,7 +72,7 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+  <nav class="navbar navbar-expand-lg shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">Artisan Bakery</a>
       <button
@@ -114,7 +95,7 @@
             <a class="nav-link" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cakes.html">Our cakes</a>
+            <a class="nav-link" href="cakes.html">Our Cakes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="classes.html">Baking Class</a>
