--- a/Feedback.html
+++ b/Feedback.html
@@ -45,7 +45,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Sweet Sensations Bakery</a>
+        <a class="navbar-brand" href="index.html"> Artisan Bakery</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -140,7 +140,7 @@
 
   <!-- FOOTER -->
   <footer class="bg-dark text-white text-center py-3 mt-5">
-    <p>&copy; 2025 Sweet Sensations Bakery | All Rights Reserved</p>
+    <p>&copy; 2025 Artisan Bakery | All Rights Reserved</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
