--- a/cakes.html
+++ b/cakes.html
@@ -11,6 +11,8 @@
     rel="stylesheet"
     crossorigin="anonymous"
   />
+   <link rel="stylesheet" type="text/css" href="styles.css">
+
   <style>
     body {
       background-color: #ffe4eb;
