--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
     <article>
       <div class="row g-4 align-items-center">
         <div class="col-md-5">
-          <img src="Freash Bread.jpg" alt="Fresh Bread" class="img-fluid rounded shadow-sm" />
+          <img src="Fresh Bread.jpg" alt="Fresh Bread" class="img-fluid rounded shadow-sm" />
         </div>
         <div class="col-md-7">
           <h2 class="mb-3">Our Story</h2>
